# keras-facenet

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  setup.cfg
keras_facenet/: __init__.py  embedding_model.py  inception_resnet_v1.py  metadata.py  utils.py
tests/: test_parity_with_facenet.py
