[flake8]
ignore = E226,E129,W503,W391,W292,E252,W504,F403

[metadata]
name = keras-facenet
version = 0.3.1
author = Fausto Morales
author_email = faustomorales@gmail.com
description = A package wrapping the FaceNet embedding model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/keras-facenet
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data=False
install_requires =
    mtcnn

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
norecursedirs = facenet
filterwarnings =
    ignore:inspect\.getargspec\(\) is deprecated, use inspect\.signature\(\) instead:DeprecationWarning
    ignore:^Conversion of the second argument of issubdtype from `float` to `np\.floating` is deprecated:FutureWarning
    ignore:builtin type EagerTensor has no __module__ attribute:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses:DeprecationWarning